<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello!!!</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_welcome">JChat</string>
    <string name="new_team_text">If you don\'t have a team, go ahead and create one.</string>
    <string name="title_activity_chat_view">ChatViewActivity</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_create_new_team">Create New Team</string>
    <string name="label_continue">Continue</string>
    <string name="label_domain_name">.jchat.com</string>
    <string name="hint_chat_text">Message</string>
    <string name="find_team_text">Find your team</string>
    <string name="find_team_email_text">Enter the email address associated with your team</string>
    <string name="find_team_emaillink_text">An email will be sent to you at this address with a link to sign in.</string>
    <string name="title_email_address_text">*.jchat.com</string>
    <string name="lable_email_address">Enter your email address for \n *.jchat.com</string>
    <string name="privacy_policy_text">Take a minute to review our \n Privacy Policy</string>
    <string name="lable_password_text">Enter your password for \n *.jchat.com</string>
    <string name="length_password_text">Password long?Hard to type?</string>
    <string name="password_emaillink_text">Get a magic link sent to your email that\'ll sign you in instantly.</string>
    <string name="title_activity_upload_to_team">Upload To Team</string>

</resources>
