<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_box_margin"
    >

    <TextView
        android:id="@+id/tx_slack_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        
        android:text="@string/title_email_address_text" 
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/tx_slack_domain_name"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/lable_password_text" 
       
        android:textSize="@dimen/text_medium_top"/>

    
          
          <EditText
              android:id="@+id/et_slack_signin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:layout_alignParentTop="true"
              android:layout_gravity="center"
              android:hint="Password"
              android:layout_marginTop="15dp"
              android:inputType="textPassword"
              android:ems="8" >
              

              <requestFocus />
          </EditText>

          
          
    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/label_continue"
        android:textColor="@color/text_white"
        android:background="@drawable/button_blue_style"
        android:layout_gravity="center"
        android:layout_margin="@dimen/field_margin"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/tx_slack_domain_name"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        
        android:text="@string/length_password_text"
       
        
        android:textSize="18sp"
        />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" 
         android:layout_margin="@dimen/field_margin"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/tx_slack_domain_name"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        
        android:text="@string/password_emaillink_text" 
        
        
        
        android:textSize="@dimen/text_medium_bottom"
        />
    <Button
        android:id="@+id/btn_slack_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Send Me a Mobile Sign In Link"
        android:textColor="@color/text_white"
        android:background="@drawable/button_blue_style"
        android:layout_gravity="center"
        android:layout_margin="@dimen/field_margin"
        android:textSize="20dp" />
   
</LinearLayout>